[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envcaster"
version = "0.2.0"
description = "Typed, dependency-free environment variable loading: read env vars as int/bool/list/json/Path with defaults, required-checks, and clear errors."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "YoungAlpaccino" }]
keywords = ["env", "environment", "config", "dotenv", "settings", "12factor", "typed", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "build", "twine"]

[project.urls]
Homepage = "https://github.com/YoungAlpaccino/envcast"
Repository = "https://github.com/YoungAlpaccino/envcast"
Issues = "https://github.com/YoungAlpaccino/envcast/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
envcaster = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
